// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LongOperationIndicator (snapshot) > renders at ~5s elapsed (not slow) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--sira-celeste, #38BDF8);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 20px; height: 20px;"
    >
      <svg
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        enable-background="new 0 0 0 0"
        focusable="false"
        height="20"
        id="L9"
        version="1.1"
        viewBox="10 40 45 50"
        width="20"
        x="0px"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0px"
      >
        <rect
          fill="#38BDF8"
          height="10"
          width="4"
          x="20"
          y="50"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            begin="0"
            dur="0.6s"
            repeatCount="indefinite"
            type="translate"
            values="0 0; 0 20; 0 0"
          />
        </rect>
        <rect
          fill="#38BDF8"
          height="10"
          width="4"
          x="30"
          y="50"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            begin="0.2s"
            dur="0.6s"
            repeatCount="indefinite"
            type="translate"
            values="0 0; 0 20; 0 0"
          />
        </rect>
        <rect
          fill="#38BDF8"
          height="10"
          width="4"
          x="40"
          y="50"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            begin="0.4s"
            dur="0.6s"
            repeatCount="indefinite"
            type="translate"
            values="0 0; 0 20; 0 0"
          />
        </rect>
      </svg>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-muted-foreground"
    >
      5
      s
    </span>
  </div>
</div>
`;

exports[`LongOperationIndicator (snapshot) > renders at ~35s elapsed (slow state) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--sira-celeste, #38BDF8);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 20px; height: 20px;"
    >
      <svg
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        enable-background="new 0 0 0 0"
        focusable="false"
        height="20"
        id="L9"
        version="1.1"
        viewBox="10 40 45 50"
        width="20"
        x="0px"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0px"
      >
        <rect
          fill="#38BDF8"
          height="10"
          width="4"
          x="20"
          y="50"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            begin="0"
            dur="0.6s"
            repeatCount="indefinite"
            type="translate"
            values="0 0; 0 20; 0 0"
          />
        </rect>
        <rect
          fill="#38BDF8"
          height="10"
          width="4"
          x="30"
          y="50"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            begin="0.2s"
            dur="0.6s"
            repeatCount="indefinite"
            type="translate"
            values="0 0; 0 20; 0 0"
          />
        </rect>
        <rect
          fill="#38BDF8"
          height="10"
          width="4"
          x="40"
          y="50"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            begin="0.4s"
            dur="0.6s"
            repeatCount="indefinite"
            type="translate"
            values="0 0; 0 20; 0 0"
          />
        </rect>
      </svg>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-amber-600"
    >
      35
      s
       · está tardando más de lo habitual
    </span>
  </div>
</div>
`;
